tests/snapshots/snapshots__fixture_neverthrow_level4.snap
---
source: tests/snapshots.rs
expression: output
---
_internals/error.ts
     3→export interface ErrorConfig {
     7→const defaultErrorConfig: ErrorConfig = {
    11→interface NeverThrowError<T, E> {
    27→export const createNeverThrowError = <T, E>(
    28→  message: string,
    29→  result: Result<T, E>,
    30→  config: ErrorConfig = defaultErrorConfig,
    31→): NeverThrowError<T, E> => {
_internals/utils.ts
     5→export type ExtractOkTypes<T extends readonly Result<unknown, unknown>[]> = {
     6→  [idx in keyof T]: T[idx] extends Result<infer U, unknown> ? U : never
     7→}
    10→export type ExtractOkAsyncTypes<T extends readonly ResultAsync<unknown, unknown>[]> = {
    11→  [idx in keyof T]: T[idx] extends ResultAsync<infer U, unknown> ? U : never
    12→}
    15→export type ExtractErrTypes<T extends readonly Result<unknown, unknown>[]> = {
    16→  [idx in keyof T]: T[idx] extends Result<unknown, infer E> ? E : never
    17→}
    20→export type ExtractErrAsyncTypes<T extends readonly ResultAsync<unknown, unknown>[]> = {
    21→  [idx in keyof T]: T[idx] extends ResultAsync<unknown, infer E> ? E : never
    22→}
    24→export type InferOkTypes<R> = R extends Result<infer T, unknown> ? T : never
    25→export type InferErrTypes<R> = R extends Result<unknown, infer E> ? E : never
    27→export type InferAsyncOkTypes<R> = R extends ResultAsync<infer T, unknown> ? T : never
    28→export type InferAsyncErrTypes<R> = R extends ResultAsync<unknown, infer E> ? E : never
    30→/**
    31→ * Short circuits on the FIRST Err value that we find
    32→ */
    33→export const combineResultList = <T, E>(
    34→  resultList: readonly Result<T, E>[],
    35→): Result<readonly T[], E> => {
    54→export const combineResultAsyncList = <T, E>(
    61→/**
    62→ * Give a list of all the errors we find
    63→ */
    64→export const combineResultListWithAllErrors = <T, E>(
    65→  resultList: readonly Result<T, E>[],
    66→): Result<readonly T[], E[]> => {
    82→export const combineResultAsyncListWithAllErrors = <T, E>(
index.ts
result-async.ts
    22→export class ResultAsync<T, E> implements PromiseLike<Result<T, E>> {
    25→  constructor(res: Promise<Result<T, E>>) {
    30→  static fromSafePromise<T, E = never>(promise: Promise<T>): ResultAsync<T, E> {
    37→  static fromPromise<T, E>(promise: Promise<T>, errorFn: (e: unknown) => E): ResultAsync<T, E> {
    46→  static fromThrowable<A extends readonly any[], R, E>(
    47→    fn: (...args: A) => Promise<R>,
    48→    errorFn?: (err: unknown) => E,
    49→  ): (...args: A) => ResultAsync<R, E> {
    69→  static combine<T extends readonly ResultAsync<unknown, unknown>[]>(
    70→    asyncResultList: T,
    71→  ): CombineResultAsyncs<T> {
    81→  static combineWithAllErrors<T extends readonly ResultAsync<unknown, unknown>[]>(
    82→    asyncResultList: T,
    83→  ): CombineResultsWithAllErrorsArrayAsync<T> {
    89→  map<A>(f: (t: T) => A | Promise<A>): ResultAsync<A, E> {
   101→  andThrough<F>(f: (t: T) => Result<unknown, F> | ResultAsync<unknown, F>): ResultAsync<T, E | F> {
   117→  andTee(f: (t: T) => unknown): ResultAsync<T, E> {
   133→  orTee(f: (t: E) => unknown): ResultAsync<T, E> {
   149→  mapErr<U>(f: (e: E) => U | Promise<U>): ResultAsync<T, U> {
   169→  andThen(f: any): any {
   190→  orElse(f: any): any {
   202→  match<A, B = A>(ok: (t: T) => A, _err: (e: E) => B): Promise<A | B> {
   206→  unwrapOr<A>(t: A): Promise<T | A> {
   211→   * @deprecated will be removed in 9.0.0.
   222→  async *safeUnwrap(): AsyncGenerator<Err<never, E>, T> {
   227→  then<A, B>(
   228→    successCallback?: (res: Result<T, E>) => A | PromiseLike<A>,
   229→    failureCallback?: (reason: unknown) => B | PromiseLike<B>,
   230→  ): PromiseLike<A | B> {
   249→export function okAsync<T, E = never>(value: T): ResultAsync<T, E> {
   255→export function errAsync<T = never, E = unknown>(err: E): ResultAsync<T, E> {
   259→export const fromPromise = ResultAsync.fromPromise
   260→export const fromSafePromise = ResultAsync.fromSafePromise
   262→export const fromAsyncThrowable = ResultAsync.fromThrowable
   265→export type CombineResultAsyncs<
   266→  T extends readonly ResultAsync<unknown, unknown>[]
   267→> = IsLiteralArray<T> extends 1
   268→  ? TraverseAsync<UnwrapAsync<T>>
   269→  : ResultAsync<ExtractOkAsyncTypes<T>, ExtractErrAsyncTypes<T>[number]>
   272→export type CombineResultsWithAllErrorsArrayAsync<
   273→  T extends readonly ResultAsync<unknown, unknown>[]
   274→> = IsLiteralArray<T> extends 1
   275→  ? TraverseWithAllErrorsAsync<UnwrapAsync<T>>
   276→  : ResultAsync<ExtractOkAsyncTypes<T>, ExtractErrAsyncTypes<T>[number][]>
   279→type UnwrapAsync<T> = IsLiteralArray<T> extends 1
   280→  ? Writable<T> extends [infer H, ...infer Rest]
   281→    ? H extends PromiseLike<infer HI>
   282→      ? HI extends Result<unknown, unknown>
   283→        ? [Dedup<HI>, ...UnwrapAsync<Rest>]
   284→        : never
   285→      : never
   286→    : []
   287→  : // If we got something too general such as ResultAsync<X, Y>[] then we
   288→  // simply need to map it to ResultAsync<X[], Y[]>. Yet `ResultAsync`
   289→  // itself is a union therefore it would be enough to cast it to Ok.
   290→  T extends Array<infer A>
   291→  ? A extends PromiseLike<infer HI>
   292→    ? HI extends Result<infer L, infer R>
   293→      ? Ok<L, R>[]
   294→      : never
   295→    : never
   296→  : never
   300→type TraverseAsync<T, Depth extends number = 5> = IsLiteralArray<T> extends 1
   301→  ? Combine<T, Depth> extends [infer Oks, infer Errs]
   302→    ? ResultAsync<EmptyArrayToNever<Oks>, MembersToUnion<Errs>>
   303→    : never
   304→  : // The following check is important if we somehow reach to the point of
   305→  // checking something similar to ResultAsync<X, Y>[]. In this case we don't
   306→  // know the length of the elements, therefore we need to traverse the X and Y
   307→  // in a way that the result should contain X[] and Y[].
   308→  T extends Array<infer I>
   309→  ? // The MemberListOf<I> here is to include all possible types. Therefore
   310→    // if we face (ResultAsync<X, Y> | ResultAsync<A, B>)[] this type should
   311→    // handle the case.
   312→    Combine<MemberListOf<I>, Depth> extends [infer Oks, infer Errs]
   313→    ? // The following `extends unknown[]` checks are just to satisfy the TS.
   314→      // we already expect them to be an array.
   315→      Oks extends unknown[]
   316→      ? Errs extends unknown[]
   317→        ? ResultAsync<EmptyArrayToNever<Oks[number][]>, MembersToUnion<Errs[number][]>>
   318→        : ResultAsync<EmptyArrayToNever<Oks[number][]>, Errs>
   319→      : // The rest of the conditions are to satisfy the TS and support
   320→      // the edge cases which are not really expected to happen.
   321→      Errs extends unknown[]
   322→      ? ResultAsync<Oks, MembersToUnion<Errs[number][]>>
   323→      : ResultAsync<Oks, Errs>
   324→    : never
   325→  : never
   330→type TraverseWithAllErrorsAsync<T, Depth extends number = 5> = TraverseAsync<
   331→  T,
   332→  Depth
   333→> extends ResultAsync<infer Oks, infer Errs>
   334→  ? ResultAsync<Oks, Errs[]>
   335→  : never
   338→type Writable<T> = T extends ReadonlyArray<unknown> ? [...T] : T
result.ts
    14→export namespace Result {
    23→  export function fromThrowable<Fn extends (...args: readonly any[]) => any, E>(
    24→    fn: Fn,
    25→    errorFn?: (e: unknown) => E,
    26→  ): (...args: Parameters<Fn>) => Result<ReturnType<Fn>, E> {
    43→  export function combine<
    44→    T extends readonly [Result<unknown, unknown>, ...Result<unknown, unknown>[]]
    45→  >(resultList: T): CombineResults<T> {
    55→  export function combineWithAllErrors<T extends readonly Result<unknown, unknown>[]>(
    56→    resultList: T,
    57→  ): CombineResultsWithAllErrorsArray<T> {
    62→export type Result<T, E> = Ok<T, E> | Err<T, E>
    66→export function ok<T, E = never>(value: T): Ok<T, E> {
    73→export function err<T = never, E = unknown>(err: E): Err<T, E> {
   122→export function safeTry<T, E>(
   123→  body:
   124→    | (() => Generator<Err<never, E>, Result<T, E>>)
   125→    | (() => AsyncGenerator<Err<never, E>, Result<T, E>>),
   126→): Result<T, E> | ResultAsync<T, E> {
   134→interface IResult<T, E> {
   136→   * Used to check if a `Result` is an `OK`
   140→  isOk(): this is Ok<T, E>
   143→   * Used to check if a `Result` is an `Err`
   147→  isErr(): this is Err<T, E>
   150→   * Maps a `Result<T, E>` to `Result<U, E>`
   157→  map<A>(f: (t: T) => A): Result<A, E>
   160→   * Maps a `Result<T, E>` to `Result<T, F>` by applying a function to a
   168→  mapErr<U>(f: (e: E) => U): Result<T, U>
   183→  andThen<U, F>(f: (t: T) => Result<U, F>): Result<U, E | F>
   186→   * This "tee"s the current value to an passed-in computation such as side
   195→  andTee(f: (t: T) => unknown): Result<T, E>
   198→   * This "tee"s the current `Err` value to an passed-in computation such as side
   207→  orTee(f: (t: E) => unknown): Result<T, E>
   219→  andThrough<F>(f: (t: T) => Result<unknown, F>): Result<T, E | F>
   233→  orElse<U, A>(f: (e: E) => Result<U, A>): Result<U | T, A>
   236→   * Similar to `map` Except you must return a new `Result`.
   244→  asyncAndThen<U, F>(f: (t: T) => ResultAsync<U, F>): ResultAsync<U, E | F>
   247→   * Maps a `Result<T, E>` to `ResultAsync<U, E>`
   253→  asyncMap<U>(f: (t: T) => Promise<U>): ResultAsync<U, E>
   256→   * Unwrap the `Ok` value, or return the default if there is an `Err`
   260→  unwrapOr<A>(v: A): T | A
   264→   * Given 2 functions (one for the `Ok` variant and one for the `Err` variant)
   276→  match<A, B = A>(ok: (t: T) => A, err: (e: E) => B): A | B
   279→   * @deprecated will be removed in 9.0.0.
   290→  safeUnwrap(): Generator<Err<never, E>, T>
   293→   * **This method is unsafe, and should only be used in a test environments**
   299→  _unsafeUnwrap(config?: ErrorConfig): T
   302→   * **This method is unsafe, and should only be used in a test environments**
   309→  _unsafeUnwrapErr(config?: ErrorConfig): E
   312→export class Ok<T, E> implements IResult<T, E> {
   313→  constructor(readonly value: T) {}
   315→  isOk(): this is Ok<T, E> {
   319→  isErr(): this is Err<T, E> {
   323→  map<A>(f: (t: T) => A): Result<A, E> {
   328→  mapErr<U>(_f: (e: E) => U): Result<T, U> {
   337→  andThen(f: any): any {
   344→  andThrough(f: any): any {
   348→  andTee(f: (t: T) => unknown): Result<T, E> {
   357→  orTee(_f: (t: E) => unknown): Result<T, E> {
   366→  orElse(_f: any): any {
   370→  asyncAndThen<U, F>(f: (t: T) => ResultAsync<U, F>): ResultAsync<U, E | F> {
   379→  asyncAndThrough(f: (t: T) => ResultAsync<unknown, unknown>): any {
   383→  asyncMap<U>(f: (t: T) => Promise<U>): ResultAsync<U, E> {
   388→  unwrapOr<A>(_v: A): T | A {
   393→  match<A, B = A>(ok: (t: T) => A, _err: (e: E) => B): A | B {
   397→  safeUnwrap(): Generator<Err<never, E>, T> {
   405→  _unsafeUnwrap(_?: ErrorConfig): T {
   409→  _unsafeUnwrapErr(config?: ErrorConfig): E {
   419→export class Err<T, E> implements IResult<T, E> {
   420→  constructor(readonly error: E) {}
   422→  isOk(): this is Ok<T, E> {
   426→  isErr(): this is Err<T, E> {
   431→  map<A>(_f: (t: T) => A): Result<A, E> {
   435→  mapErr<U>(f: (e: E) => U): Result<T, U> {
   439→  andThrough<F>(_f: (t: T) => Result<unknown, F>): Result<T, E | F> {
   443→  andTee(_f: (t: T) => unknown): Result<T, E> {
   447→  orTee(f: (t: E) => unknown): Result<T, E> {
   461→  andThen(_f: any): any {
   470→  orElse(f: any): any {
   475→  asyncAndThen<U, F>(_f: (t: T) => ResultAsync<U, F>): ResultAsync<U, E | F> {
   479→  asyncAndThrough<F>(_f: (t: T) => ResultAsync<unknown, F>): ResultAsync<T, E | F> {
   484→  asyncMap<U>(_f: (t: T) => Promise<U>): ResultAsync<U, E> {
   488→  unwrapOr<A>(v: A): T | A {
   492→  match<A, B = A>(_ok: (t: T) => A, err: (e: E) => B): A | B {
   496→  safeUnwrap(): Generator<Err<never, E>, T> {
   505→  _unsafeUnwrap(config?: ErrorConfig): T {
   509→  _unsafeUnwrapErr(_?: ErrorConfig): E {
   523→export const fromThrowable = Result.fromThrowable
   530→type Prev = [
   531→  never,
   532→  0,
   533→  1,
   534→  2,
   535→  3,
   536→  4,
   537→  5,
   538→  6,
   539→  7,
   540→  8,
   541→  9,
   542→  10,
   543→  11,
   544→  12,
   545→  13,
   546→  14,
   547→  15,
   548→  16,
   549→  17,
   550→  18,
   551→  19,
   552→  20,
   553→  21,
   554→  22,
   555→  23,
   556→  24,
   557→  25,
   558→  26,
   559→  27,
   560→  28,
   561→  29,
   562→  30,
   563→  31,
   564→  32,
   565→  33,
   566→  34,
   567→  35,
   568→  36,
   569→  37,
   570→  38,
   571→  39,
   572→  40,
   573→  41,
   574→  42,
   575→  43,
   576→  44,
   577→  45,
   578→  46,
   579→  47,
   580→  48,
   581→  49,
   582→  ...0[]
   583→]
   590→type CollectResults<T, Collected extends unknown[] = [], Depth extends number = 50> = [
   591→  Depth,
   592→] extends [never]
   593→  ? []
   594→  : T extends [infer H, ...infer Rest]
   595→  ? // And test whether the head of the list is a result
   596→    H extends Result<infer L, infer R>
   597→    ? // Continue collecting...
   598→      CollectResults<
   599→        // the rest of the elements
   600→        Rest,
   601→        // The collected
   602→        [...Collected, [L, R]],
   603→        // and one less of the current depth
   604→        Prev[Depth]
   605→      >
   606→    : never // Impossible
   607→  : Collected
   614→export type Transpose<
   615→  A,
   616→  Transposed extends unknown[][] = [],
   617→  Depth extends number = 10
   618→> = A extends [infer T, ...infer Rest]
   619→  ? T extends [infer L, infer R]
   620→    ? Transposed extends [infer PL, infer PR]
   621→      ? PL extends unknown[]
   622→        ? PR extends unknown[]
   623→          ? Transpose<Rest, [[...PL, L], [...PR, R]], Prev[Depth]>
   624→          : never
   625→        : never
   626→      : Transpose<Rest, [[L], [R]], Prev[Depth]>
   627→    : Transposed
   628→  : Transposed
   635→export type Combine<T, Depth extends number = 5> = Transpose<CollectResults<T>, [], Depth> extends [
   636→  infer L,
   637→  infer R,
   638→]
   639→  ? [UnknownMembersToNever<L>, UnknownMembersToNever<R>]
   640→  : Transpose<CollectResults<T>, [], Depth> extends []
   641→  ? [[], []]
   642→  : never
   645→export type Dedup<T> = T extends Result<infer RL, infer RR>
   646→  ? [unknown] extends [RL]
   647→    ? Err<RL, RR>
   648→    : Ok<RL, RR>
   649→  : T
   652→export type MemberListOf<T> = (
   653→  (T extends unknown ? (t: T) => T : never) extends infer U
   654→    ? (U extends unknown ? (u: U) => unknown : never) extends (v: infer V) => unknown
   655→      ? V
   656→      : never
   657→    : never
   658→) extends (_: unknown) => infer W
   659→  ? [...MemberListOf<Exclude<T, W>>, W]
   660→  : []
   669→export type EmptyArrayToNever<T, NeverArrayToNever extends number = 0> = T extends []
   670→  ? never
   671→  : NeverArrayToNever extends 1
   672→  ? T extends [never, ...infer Rest]
   673→    ? [EmptyArrayToNever<Rest>] extends [never]
   674→      ? never
   675→      : T
   676→    : T
   677→  : T
   680→type UnknownMembersToNever<T> = T extends [infer H, ...infer R]
   681→  ? [[unknown] extends [H] ? never : H, ...UnknownMembersToNever<R>]
   682→  : T
   685→export type MembersToUnion<T> = T extends unknown[] ? T[number] : never
   688→export type IsLiteralArray<T> = T extends { length: infer L }
   689→  ? L extends number
   690→    ? number extends L
   691→      ? 0
   692→      : 1
   693→    : 0
   694→  : 0
   698→type Traverse<T, Depth extends number = 5> = Combine<T, Depth> extends [infer Oks, infer Errs]
   699→  ? Result<EmptyArrayToNever<Oks, 1>, MembersToUnion<Errs>>
   700→  : never
   704→type TraverseWithAllErrors<T, Depth extends number = 5> = Traverse<T, Depth> extends Result<
   705→  infer Oks,
   706→  infer Errs
   707→>
   708→  ? Result<Oks, Errs[]>
   709→  : never
   712→export type CombineResults<
   713→  T extends readonly Result<unknown, unknown>[]
   714→> = IsLiteralArray<T> extends 1
   715→  ? Traverse<T>
   716→  : Result<ExtractOkTypes<T>, ExtractErrTypes<T>[number]>
   719→export type CombineResultsWithAllErrorsArray<
   720→  T extends readonly Result<unknown, unknown>[]
   721→> = IsLiteralArray<T> extends 1
   722→  ? TraverseWithAllErrors<T>
   723→  : Result<ExtractOkTypes<T>, ExtractErrTypes<T>[number][]>
